--- a/package.json
+++ b/package.json
@@ -27,11 +27,11 @@
     "node-libs-browser": "0.5.3",
     "nullthrows": "^1.0.0",
     "object-assign": "4.0.1",
+    "prop-types": "^15.6.1",
     "raw-loader": "^0.5.1",
-    "react": "15.4.2",
-    "react-addons-create-fragment": "15.4.2",
+    "react": "^16.4.1",
     "react-color": "^2.11.7",
-    "react-dom": "15.4.2",
+    "react-dom": "^16.4.1",
     "react-portal": "^3.1.0",
     "webpack": "1.12.9"
   },
