--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "classnames": "2.2.1",
     "cli-spinners": "^1.0.0",
     "clipboard-js": "^0.3.3",
+    "css-loader": "^0.28.11",
+    "d3": "^5.4.0",
+    "d3-tip": "^0.9.1",
     "es6-symbol": "3.0.2",
     "eslint": "2.10.2",
     "eslint-plugin-react": "5.1.1",
@@ -24,24 +27,27 @@
     "jest": "22.1.4",
     "json-loader": "0.5.4",
     "log-update": "^2.0.0",
+    "memoize-one": "^3.1.1",
     "node-libs-browser": "0.5.3",
     "nullthrows": "^1.0.0",
     "object-assign": "4.0.1",
     "prop-types": "^15.6.1",
     "raw-loader": "^0.5.1",
-    "react": "^16.4.0",
+    "react": "16.4.1",
     "react-color": "^2.11.7",
-    "react-dom": "^16.4.0",
+    "react-dom": "/Users/bvaughn/Documents/git/react/build/node_modules/react-dom",
     "react-portal": "^3.1.0",
+    "style-loader": "^0.21.0",
     "webpack": "1.12.9"
   },
   "license": "BSD-3-Clause",
   "repository": "facebook/react-devtools",
   "private": true,
-  "workspaces": ["packages/*"],
+  "workspaces": [
+    "packages/*"
+  ],
   "scripts": {
-    "build:extension":
-      "yarn run build:extension:chrome && yarn run build:extension:firefox",
+    "build:extension": "yarn run build:extension:chrome && yarn run build:extension:firefox",
     "build:extension:chrome": "node ./shells/chrome/build",
     "build:extension:firefox": "node ./shells/firefox/build",
     "build:standalone": "cd packages/react-devtools-core && yarn run build",
@@ -56,7 +62,9 @@
     "typecheck": "flow check"
   },
   "jest": {
-    "modulePathIgnorePatterns": ["<rootDir>/shells"]
+    "modulePathIgnorePatterns": [
+      "<rootDir>/shells"
+    ]
   },
   "devDependencies": {
     "chrome-launch": "^1.1.4",
