--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-color": "^2.11.7",
     "react-dom": "/Users/bvaughn/Documents/git/react/build/node_modules/react-dom",
     "react-portal": "^3.1.0",
+    "react-virtualized-auto-sizer": "^1.0.2",
     "style-loader": "^0.21.0",
     "webpack": "1.12.9"
   },
