--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-portal": "^3.1.0",
     "react-virtualized-auto-sizer": "^1.0.2",
     "react-window": "^1.1.1",
+    "semver": "^5.5.1",
     "webpack": "1.12.9"
   },
   "license": "BSD-3-Clause",
