Add `replicator` dep

--- a/packages/react-devtools-core/package.json
+++ b/packages/react-devtools-core/package.json
@@ -24,6 +24,7 @@
   "author": "Jared Forsyth",
   "license": "BSD-3-Clause",
   "dependencies": {
+    "replicator": "^1.0.2",
     "shell-quote": "^1.6.1",
     "ws": "^3.3.1"
   },
