--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "dependencies": {
+    "@babel/core": "^7.1.6",
+    "@babel/plugin-proposal-class-properties": "^7.1.0",
+    "@babel/plugin-transform-flow-strip-types": "^7.1.6",
+    "@babel/preset-env": "^7.1.6",
+    "@babel/preset-flow": "^7.0.0",
+    "@babel/preset-react": "^7.0.0",
     "adm-zip": "^0.4.7",
-    "babel-core": "6.3.21",
-    "babel-eslint": "6.0.4",
-    "babel-jest": "22.1.0",
-    "babel-loader": "6.2.0",
-    "babel-preset-es2015": "6.3.13",
-    "babel-preset-react": "6.3.13",
-    "babel-preset-stage-0": "6.3.13",
+    "babel-eslint": "6",
+    "babel-loader": "^8.0.4",
     "child-process-promise": "^2.2.1",
     "classnames": "2.2.1",
     "cli-spinners": "^1.0.0",
@@ -22,7 +23,6 @@
     "gh-pages": "^1.0.0",
     "immutable": "3.7.6",
     "jest": "22.1.4",
-    "json-loader": "0.5.4",
     "log-update": "^2.0.0",
     "lru-cache": "^4.1.3",
     "memoize-one": "^3.1.1",
@@ -30,7 +30,6 @@
     "nullthrows": "^1.0.0",
     "object-assign": "4.0.1",
     "prop-types": "^15.6.1",
-    "raw-loader": "^0.5.1",
     "react": "^16.5.2",
     "react-color": "^2.11.7",
     "react-dom": "^16.5.2",
@@ -38,7 +37,8 @@
     "react-virtualized-auto-sizer": "^1.0.2",
     "react-window": "^1.1.1",
     "semver": "^5.5.1",
-    "webpack": "1.12.9"
+    "webpack": "^4.26.0",
+    "webpack-cli": "^3.1.2"
   },
   "license": "BSD-3-Clause",
   "repository": "facebook/react-devtools",
