--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "classnames": "2.2.1",
     "cli-spinners": "^1.0.0",
     "clipboard-js": "^0.3.3",
+    "css-loader": "^1.0.1",
     "es6-symbol": "3.0.2",
     "eslint": "2.10.2",
     "eslint-plugin-react": "5.1.1",
@@ -39,6 +40,7 @@
     "react-virtualized-auto-sizer": "^1.0.2",
     "react-window": "^1.1.1",
     "semver": "^5.5.1",
+    "style-loader": "^0.23.1",
     "webpack": "^4.26.0",
     "webpack-cli": "^3.1.2"
   },
