--- a/package.json
+++ b/package.json
@@ -34,9 +34,9 @@
     "nullthrows": "^1.0.0",
     "object-assign": "4.0.1",
     "prop-types": "^15.6.1",
-    "react": "^16.7.0-alpha.2",
+    "react": "^16.8.6",
     "react-color": "^2.11.7",
-    "react-dom": "^16.7.0-alpha.2",
+    "react-dom": "^16.8.6",
     "react-portal": "^3.1.0",
     "react-virtualized-auto-sizer": "^1.0.2",
     "react-window": "^1.1.1",
